# django-app

./: README.md  pyproject.toml
config/: settings.py
src/django_app/: __init__.py
