[project]
name = "django-app"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "komei0727", email = "krymei072730@gmail.com" }
]
dependencies = [
    "django>=5.0.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/django_app"]
